cmake_minimum_required(VERSION 2.8)
set (CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_FLAGS "-O3")
#	set (flycap_dir "/usr/include/flycapture")
#	project( projLmshorn )
project( lmshorn )
#	find_package( OpenCV REQUIRED )
#	add_executable( gigecam gigecam.cpp)
#	target_include_directories( gigecam PRIVATE ${flycap_dir} )
#	target_link_libraries( gigecam flycapture ${OpenCV_LIBS} )
#	add_library( projLmshorn SHARED lmshorn.c)
add_library( lmshorn SHARED JACOBI.c lmshorn.c)
#	target_include_directories( lmshorn PRIVATE ${flycap_dir} )
#	target_link_libraries( gigecam flycapture ${OpenCV_LIBS} )
#	add_executable( lmshorn lmshorn.c)
#	target_include_directories( gigecamcap PRIVATE ${flycap_dir} )
#	target_link_libraries( gigecamcap gigecam flycapture ${OpenCV_LIBS} )
